# PiPico-Try-Kernel-c

./: CMakeLists.txt
application/: main.c
boot/: boot2.c  reset_hdr.c  vector_tbl.c
include/: knldef.h  sysdef.h  syslib.h  typedef.h
